# convert-from-stack-to-nix

./: .gitignore  CHANGELOG.md  bankService.cabal  default.nix  economic-ecosystem-fresh-bank-with-cabal-nix.cabal  justfile  jwt.nix  project0.nix  readme.md  release0.nix  release1.nix  shell.nix
Documentation/: API.md  READMEDEV.md  todos.md
app/: Main.hs  main.hs
config/: models.persistentmodels  routes.yesodroutes  settings.yml  test-settings.yml
src/: Application.hs  Currency.hs  Foundation.hs  Main.hs  Model.hs  Orphans.hs  Scratch.hs  Settings.hs
src/API/: CustomerAccount.hs
src/Auth/: JWT.hs
src/DB/: CustomerAccount.hs  ImportEsqueleto.hs
src/Database/Persist/Types/Email/: Internal.hs
src/Database/Persist/Types/Password/: Internal.hs
src/Handler/: CustomerAccount.hs  User.hs
src/Import/: NoFoundation.hs
src/Model/: LoginUser.hs  RegisterLoginCustomerAccount.hs
src/Types/: CustomerAccount.hs
src/Util/: UUID.hs
src/Validation/: Email.hs
src/Web/Forma/: Extended.hs
