cabal-version:      2.4
name:               economic-ecosystem-fresh-bank-with-cabal-nix
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             risingBirdSong
maintainer:         heregoingthere@outlook.com
-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable economic-ecosystem-fresh-bank-with-cabal-nix
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- build-depends:    base ^>=4.15.1.0
    build-depends: aeson 
        , aeson-casing
        , base
        , blaze-builder
        , bytestring
        , case-insensitive
        , classy-prelude
        , classy-prelude-conduit
        , classy-prelude-yesod
        , conduit
        , containers
        , data-default
        , directory
        , email-validate
        , esqueleto
        , fast-logger
        , file-embed
        , foreign-store
        , forma
        , hjsmin
        , http-client-tls
        , http-conduit
        , http-types
        , jwt
        , monad-control
        , monad-logger
        , mtl
        , persistent
        , persistent-postgresql
        , persistent-template
        , safe
        , safe-money
        , safe-money-aeson
        , shakespeare
        , template-haskell
        , text
        , time
        , transformers
        , unordered-containers
        , uuid
        , vector
        , wai
        , wai-cors
        , wai-extra
        , wai-logger
        , warp
        , yaml
        , yesod
        , yesod-auth
        , yesod-core
        , yesod-form
        , yesod-static
    hs-source-dirs:   app
    default-language: Haskell2010
